assets/css/main.css
/*
 * Author: Carlos Alvarez
 * URL: http://alvarez.is
 *
 * Project Name: 
 * Version: 1.0
 * URL: http://alvarez.is
 */

body {
  background-color: #f2f2f2;
    font-family: "Lato";
    font-weight: 300;
    font-size: 16px;
    color: #555;

    -webkit-font-smoothing: antialiased;
    -webkit-overflow-scrolling: touch;
}

/* Titles */
h1, h2, h3, h4, h5, h6 {
    font-family: "Raleway";
    font-weight: 300;
    color: #333;
}


/* Paragraph & Typographic */
p {
    line-height: 28px;
    margin-bottom: 25px;
}

.centered {
    text-align: center;
}

.goleft {
	text-align: left;
}

.goright {
	text-align: right;
}

/* Links */
a {
    color: #f85c37;
    word-wrap: break-word;

    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
    transition: color 0.1s ease-in, background 0.1s ease-in;
}

a:hover,
a:focus {
    color: #7b7b7b;
    text-decoration: none;
    outline: 0;
}

a:before,
a:after {
    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
    transition: color 0.1s ease-in, background 0.1s ease-in;
}

 hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/* BOOTSTRAP CHANGES */

/* Button Theme Configuration */

.btn {
  border-radius: 0px;
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: 100;
}
.btn-theme {
  color: white;
  background-color: transparent;
  border-color: white;
  padding-right: 10px;
  padding-left: 10px;
}

.btn-theme:hover {
	color: #2f2f2f;
	background-color: white;
}


/* Modal Configuration */

.modal-header {
	background: #1abc9c;
}

.modal-header h4 {
	color: white;
}

.modal-footer {
	background: #2b2b2b;
}

/* Navbar Modification */

.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
color: #ffffff;
background-color: #2c3e50;
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus {
  color: #ffffff;
  text-decoration: none;
  background-color: #2c3e50;
}

.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
color: #ffffff;
text-decoration: none;
background-color: #2c3e50;
outline: 0;
}

/* Form Modifications */

.form-control {
	border-radius: 0px;
	padding: 10px 18px;
	font-size: 18px;
	font-family: 'Lato', sans-serif;
	color: #2f2f2f;
	font-weight: 100;
}

input {
	padding: 10px 18px;
}

label {
	font-weight: 500;
	font-family: 'Raleway', sans-serif;
}

input[type="submit"] {
	border: 0px;
	margin-top: 1em;
}
/* ==========================================================================
   Wrap Sections
   ========================================================================== */

#headerwrap {
	background: url(../img/header-bg.jpg) no-repeat center top;
	margin-top: 50px;
	padding-top:20px;
	background-attachment: relative;
	background-position: center center;
	min-height: 500px;
	width: 100%;
	
    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
/* David changed from White to Ainc Gray */
#headerwrap h1 {
	margin-top: 70px;
	color: 333333;
	font-size: 55px;
	font-weight: 100;
	letter-spacing: 2px;
	text-align: left;
}

#headerwrap2 {
	background: url(../img/header-bg2.jpg) no-repeat center top;
	margin-top: 50px;
	padding-top:20px;
	background-attachment: relative;
	background-position: center center;
	min-height: 500px;
	width: 100%;
	
    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#headerwrap2 h1 {
	margin-top: 150px;
	color: white;
	font-size: 55px;
	font-weight: 100;
	letter-spacing: 2px;
}

/* About Wrap */

#about {
	background: url(../img/about-bg.jpg) no-repeat center top;
	padding-top:20px;
	background-attachment: relative;
	background-position: center center;
	min-height: 450px;
	width: 100%;
	
    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

#about h1 {
	margin-top: 150px;
	color: white;
	font-size: 55px;
	font-weight: 100;
	letter-spacing: 2px;
}

/* Services Wrap */

#services {
	background: url(../img/services-bg.jpg) no-repeat center top;
	padding-top:20px;
	background-attachment: relative;
	background-position: center center;
	min-height: 450px;
	width: 100%;
	
    -webkit-background-size: 100%;
    -moz-background-size: 100%;
    -o-background-size: 100%;
    background-size: 100%;

    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}



/* Changed to Ainc Gray*/
#y {
	background: #ACACAC;
	padding-top: 50px;
	padding-bottom: 50px;
	
}

#y .glyphicon {
	font-size: 60px;
	color: white;
}

#y h3 {
	color: white;
}

#y p {
	font-weight: 500;
	color: white;
}

#cv {
	padding-top: 50px;
	padding-bottom: 50px;
}

#cv .glyphicon {
	font-size: 60px;
	color: white;
}

#cv h3 {
	color: white;
}

#cv p {
	font-weight: 500;
	color: white;
}

/* Dark Blue Wrap change by David to Ainc Red */
#db {
	background: #333333;
	padding-top: 50px;
	padding-bottom: 50px;
}

#db h2 {
	color: white;
}
/* ... */

